# mm-cost-aware-scheduler

./: .gitignore  README.md  pyproject.toml  requirements-gpu-cu128.txt  requirements.txt  run_scheduler_comparison.sh
data/normalized/: assembled.jsonl  demo_assembled.jsonl
eval_results/: output_analysis.jsonl
logs/: demo_gmax.jsonl  fifo.jsonl  fifo_bursty.jsonl  gmax_bursty.jsonl  output_length_eval_mixed.jsonl  sample_run.jsonl  stress_fifo.jsonl  stress_gmax.jsonl  stress_gmax1.jsonl  stress_length-only.jsonl  stress_length-only1.jsonl  vllm_smoke.jsonl
profiles/: output_length_mixed_profile.json  output_length_profile.json  output_length_profile_textvqa_examples.json
scripts/: analyze_logs.py  analyze_output_prediction_risk.py  assemble_datasets.py  build_output_length_profile.py  build_profiling_dataset.py  compare_profile_eval_sets.py  create_mixed_workload.py  create_workload.py  evaluate_output_prediction.py  evaluate_output_prediction_ground_truth.py  plot_output_prediction_risk.py  run_benchmark.py  run_workload.py  visualize_logs.py
src/mmserve_skeleton/: __init__.py  analyzer.py  backend.py  batching.py  logging.py  models.py  pipeline.py  preprocessing.py  queue.py  scheduler.py
workloads/: bursty_demo.jsonl  demo_poisson.jsonl  profilling_dataset.json  sample_pipeline_input.jsonl  stress_mixed.jsonl
